[project]
name = "pypro"
version = "1.0.0"
description = "Default template for PDM package"
authors = [
    {name = "Giorgio Vilardo", email = "giorgio.vilardo@qonto.com"},
]
dependencies = [
    "falcon>=3.1.3",
    "fastapi>=0.112.1",
    "litestar>=2.10.0",
    "flask>=3.0.3",
    "ipython>=8.12.3",
    "rich>=13.7.1",
    "ipdb>=0.13.13",
    "pyinstrument>=4.7.2",
    "memray>=1.13.4",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
